inventory mongodb
mca@mca-HP-Pro-Tower-280-G9-E-PCI-Desktop-PC:~$ mongosh
Current Mongosh Log ID:	69b90dda1ecf128524ce5f46
Connecting to:		mongodb://127.0.0.1:27017/?directConnection=true&serverSelectionTimeoutMS=2000&appName=mongosh+2.5.8
MongoNetworkError: connect ECONNREFUSED 127.0.0.1:27017
mca@mca-HP-Pro-Tower-280-G9-E-PCI-Desktop-PC:~$ sudo systemctl start mongod
[sudo] password for mca: 
mca@mca-HP-Pro-Tower-280-G9-E-PCI-Desktop-PC:~$ mongosh
Current Mongosh Log ID:	69b90df5076c4cf4d9ce5f46
Connecting to:		mongodb://127.0.0.1:27017/?directConnection=true&serverSelectionTimeoutMS=2000&appName=mongosh+2.5.8
Using MongoDB:		8.2.1
Using Mongosh:		2.5.8

For mongosh info see: https://www.mongodb.com/docs/mongodb-shell/

------
   The server generated these startup warnings when booting
   2026-03-17T13:46:45.063+05:30: Using the XFS filesystem is strongly recommended with the WiredTiger storage engine. See http://dochub.mongodb.org/core/prodnotes-filesystem
   2026-03-17T13:46:45.311+05:30: Access control is not enabled for the database. Read and write access to data and configuration is unrestricted
   2026-03-17T13:46:45.311+05:30: For customers running the current memory allocator, we suggest changing the contents of the following sysfsFile
   2026-03-17T13:46:45.311+05:30: For customers running the current memory allocator, we suggest changing the contents of the following sysfsFile
   2026-03-17T13:46:45.311+05:30: We suggest setting the contents of sysfsFile to 0.
   2026-03-17T13:46:45.311+05:30: We suggest setting swappiness to 0 or 1, as swapping can cause performance problems.
------

test> create database inventory
Uncaught:
SyntaxError: Missing semicolon. (1:6)

> 1 | create database inventory
    |       ^
  2 |

test> create database inventory;
Uncaught:
SyntaxError: Missing semicolon. (1:6)

> 1 | create database inventory;
    |       ^
  2 |

test> use inventory
switched to db inventory
inventory> db.products.insertMany([
...   {
...     "_id": 1,
...     "name": "Phone",
...     "price": 799,
...     "releaseDate": ISODate("2011-05-24"),
...     "spec": { "ram": 4, "screen": 6.5, "cpu": 2.66 },
...     "color": ["white", "black"],
...     "storage": [64, 128, 256]
...   },
...   {
...     "_id": 2,
...     "name": "Tablet",
...     "price": 799,
...     "releaseDate": ISODate("2011-09-01"),
...     "spec": { "ram": 16, "screen": 9.5, "cpu": 3.66 },
...     "color": ["white", "black", "purple"],
...     "storage": [128, 256, 512]
...   },
...   {
...     "_id": 3,
...     "name": "SmartPhone",
...     "price": 899,
...     "releaseDate": ISODate("2022-01-14"),
...     "spec": { "ram": 12, "screen": 9.7, "cpu": 1.66 },
...     "color": ["blue"],
...     "storage": [16, 64, 128]
...   }
... ])
{ acknowledged: true, insertedIds: { '0': 1, '1': 2, '2': 3 } }
inventory> db.products.find()
[
  {
    _id: 1,
    name: 'Phone',
    price: 799,
    releaseDate: ISODate('2011-05-24T00:00:00.000Z'),
    spec: { ram: 4, screen: 6.5, cpu: 2.66 },
    color: [ 'white', 'black' ],
    storage: [ 64, 128, 256 ]
  },
  {
    _id: 2,
    name: 'Tablet',
    price: 799,
    releaseDate: ISODate('2011-09-01T00:00:00.000Z'),
    spec: { ram: 16, screen: 9.5, cpu: 3.66 },
    color: [ 'white', 'black', 'purple' ],
    storage: [ 128, 256, 512 ]
  },
  {
    _id: 3,
    name: 'SmartPhone',
    price: 899,
    releaseDate: ISODate('2022-01-14T00:00:00.000Z'),
    spec: { ram: 12, screen: 9.7, cpu: 1.66 },
    color: [ 'blue' ],
    storage: [ 16, 64, 128 ]
  }
]
inventory> db.products.find({ _id: 3 })
[
  {
    _id: 3,
    name: 'SmartPhone',
    price: 899,
    releaseDate: ISODate('2022-01-14T00:00:00.000Z'),
    spec: { ram: 12, screen: 9.7, cpu: 1.66 },
    color: [ 'blue' ],
    storage: [ 16, 64, 128 ]
  }
]
inventory> db.products.findOne()
{
  _id: 1,
  name: 'Phone',
  price: 799,
  releaseDate: ISODate('2011-05-24T00:00:00.000Z'),
  spec: { ram: 4, screen: 6.5, cpu: 2.66 },
  color: [ 'white', 'black' ],
  storage: [ 64, 128, 256 ]
}
inventory> db.products.find(
...   { _id: 2 },
...   { name: 1, price: 1, _id: 0 }
... )
[ { name: 'Tablet', price: 799 } ]
inventory>    db.products.find(
...   { _id: 2 },
...   { name: 1, price: 1, _id: 0 }
... )
[ { name: 'Tablet', price: 799 } ]
inventory> db.products.find({ price: { $eq: 799 } })
[
  {
    _id: 1,
    name: 'Phone',
    price: 799,
    releaseDate: ISODate('2011-05-24T00:00:00.000Z'),
    spec: { ram: 4, screen: 6.5, cpu: 2.66 },
    color: [ 'white', 'black' ],
    storage: [ 64, 128, 256 ]
  },
  {
    _id: 2,
    name: 'Tablet',
    price: 799,
    releaseDate: ISODate('2011-09-01T00:00:00.000Z'),
    spec: { ram: 16, screen: 9.5, cpu: 3.66 },
    color: [ 'white', 'black', 'purple' ],
    storage: [ 128, 256, 512 ]
  }
]
inventory> db.products.deleteOne({ _id: 1 })
{ acknowledged: true, deletedCount: 1 }
inventory> db.products.find(
...   { "spec.ram": 12 },
...   { name: 1, "spec.ram": 1, _id: 0 }
... )
[ { name: 'SmartPhone', spec: { ram: 12 } } ]
inventory> db.products.find({ "spec.screen": { $lt: 7 } })

inventory> db.products.find(
...   { price: { $lt: 1000 } },
...   { name: 1, price: 1, _id: 0 }
... )
[ { name: 'Tablet', price: 799 }, { name: 'SmartPhone', price: 899 } ]
inventory> db.products.find(
...   { price: { $in: [699, 799] } },
...   { name: 1, price: 1, _id: 0 }
... )
[ { name: 'Tablet', price: 799 } ]
inventory> db.products.find({ color: { $in: ["black", "white"] } })
[
  {
    _id: 2,
    name: 'Tablet',
    price: 799,
    releaseDate: ISODate('2011-09-01T00:00:00.000Z'),
    spec: { ram: 16, screen: 9.5, cpu: 3.66 },
    color: [ 'white', 'black', 'purple' ],
    storage: [ 128, 256, 512 ]
  }
]
inventory> db.products.find(
...   { price: { $nin: [699, 799] } },
...   { name: 1, price: 1, _id: 0 }
... )
[ { name: 'SmartPhone', price: 899 } ]
inventory> db.products.find(
...   {
...     $and: [
...       { price: 799 },
...       { color: { $in: ["white", "black"] } }
...     ]
...   },
...   { name: 1, price: 1, color: 1, _id: 0 }
... )
[
  { name: 'Tablet', price: 799, color: [ 'white', 'black', 'purple' ] }
]
inventory> db.products.find({
...   $or: [
...     { price: { $lt: 699 } },
...     { price: { $gt: 799 } }
...   ]
... })
[
  {
    _id: 3,
    name: 'SmartPhone',
    price: 899,
    releaseDate: ISODate('2022-01-14T00:00:00.000Z'),
    spec: { ram: 12, screen: 9.7, cpu: 1.66 },
    color: [ 'blue' ],
    storage: [ 16, 64, 128 ]
  }
]
inventory> db.products.find(
...   { releaseDate: { $exists: true } },
...   { name: 1, releaseDate: 1, _id: 0 }
... ).sort({ releaseDate: -1 })
[
  {
    name: 'SmartPhone',
    releaseDate: ISODate('2022-01-14T00:00:00.000Z')
  },
  { name: 'Tablet', releaseDate: ISODate('2011-09-01T00:00:00.000Z') }
]
inventory> db.products.find().sort({ name: 1, price: 1 })
[
  {
    _id: 3,
    name: 'SmartPhone',
    price: 899,
    releaseDate: ISODate('2022-01-14T00:00:00.000Z'),
    spec: { ram: 12, screen: 9.7, cpu: 1.66 },
    color: [ 'blue' ],
    storage: [ 16, 64, 128 ]
  },
  {
    _id: 2,
    name: 'Tablet',
    price: 799,
    releaseDate: ISODate('2011-09-01T00:00:00.000Z'),
    spec: { ram: 16, screen: 9.5, cpu: 3.66 },
    color: [ 'white', 'black', 'purple' ],
    storage: [ 128, 256, 512 ]
  }
]
inventory> db.products.find().sort({ price: -1 }).limit(1)
[
  {
    _id: 3,
    name: 'SmartPhone',
    price: 899,
    releaseDate: ISODate('2022-01-14T00:00:00.000Z'),
    spec: { ram: 12, screen: 9.7, cpu: 1.66 },
    color: [ 'blue' ],
    storage: [ 16, 64, 128 ]
  }
]
inventory> db.products.find().skip(2).limit(2)
